src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__illegal_literal_time_missing_segments_test.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error: Unexpected token: expected Literal but found ;
  ┌─ <internal>:3:15
  │
3 │             T#;
  │               ^ Unexpected token: expected Literal but found ;


